# tasks

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  install_debs.sh
1_part/: CMakeLists.txt
1_part/classes_and_structs/: CMakeLists.txt  classes.hpp  main.cpp  readme.md
1_part/classes_and_structs/tests/: CMakeLists.txt  unit.cpp
1_part/final_task/: CMakeLists.txt  main.cpp  readme.md
1_part/func_overload/: CMakeLists.txt  function.hpp  main.cpp  readme.md
1_part/func_overload/tests/: CMakeLists.txt  unit.cpp
1_part/matrix/: CMakeLists.txt  main.cpp  matrix.hpp  readme.md
1_part/matrix/tests/: CMakeLists.txt  unit.cpp
2_part/: CMakeLists.txt
2_part/array_iterator/: ArrayIterator.hpp
2_part/array_iterator/tests/: CMakeLists.txt
2_part/templates_intro/: CMakeLists.txt  array.hpp
2_part/templates_intro/tests/: CMakeLists.txt
2_part/vector_wrapper/: CMakeLists.txt  VectorWrapper.hpp  readme.md
2_part/vector_wrapper/tests/: CMakeLists.txt
ArrayIterator/: CMakeLists.txt  main.cpp  readme.md
ArrayIterator/tests/: CMakeLists.txt  unit.cpp
TemplatesIntro/: CMakeLists.txt  README.md  array.hpp  main.cpp  readme.md
TemplatesIntro/tests/: CMakeLists.txt  unit.cpp
VectorWrapper/: CMakeLists.txt  VectorWrapper.hpp  main.cpp
VectorWrapper/tests/: CMakeLists.txt  unit.cpp
docs/: setup.md  tests.md
